add navigation configs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(data_capture)
+project(service_datacenter)
 
 find_package(catkin REQUIRED COMPONENTS actionlib std_msgs message_generation)
 add_service_files(FILES RequestSaveData.srv SetBatteryLevel.srv)
