--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>data_capture</name>
+  <name>service_datacenter</name>
   <version>0.0.0</version>
-  <description>The data_capture package</description>
+  <description>The service_datacenter package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
